RESOLVED FIXED267975
WebFrameLoaderClient::dispatchDecidePolicyForNavigationAction shouldn't interact with a DocumentLoader
https://bugs.webkit.org/show_bug.cgi?id=267975
Summary WebFrameLoaderClient::dispatchDecidePolicyForNavigationAction shouldn't inter...
Alex Christensen
Reported 2024-01-23 17:51:58 PST
Attachments
Alex Christensen
Comment 1 2024-01-23 17:53:14 PST
EWS
Comment 2 2024-01-23 22:18:05 PST
Committed 273390@main (81187347e948): <https://commits.webkit.org/273390@main> Reviewed commits have been landed. Closing PR #23143 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.